3rd commit, filters, sort alpha

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,31 @@
 <p id="notice"><%= notice %></p>
 
+<%= form_tag(songs_path, method: 'get') do %>
+
+<div class="row">
+<div class="col-sm-6">
+    <div class="form-group">
+      <%= label_tag :genre_id %>
+
+      <%= select_tag :genre_id, options_for_select(Genre.all.collect { |g| [ g.name, g.id ] }), class: 'form-control', include_blank: 'Todos' %>
+    </div>
+
+    <div class="actions">
+      <%= submit_tag 'Filtrar', class: "btn btn-info" %>
+    </div>
+  </div>
+
+  <div class="col-sm-6">
+    <label>Ordenar Alfabeticamente</label>
+    <%= check_box_tag 'sort_alpha' %>
+  </div>
+</div>
+
+
+
+
+<% end %>
+
 <h1>Songs</h1>
 
 <table class="table table-bordered table-hovered table-condensed">
