--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,23 +32,28 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Coketify</a>
+            <% if user_signed_in? %>
+            <a class="navbar-brand" href="#">Spotify - [ <%= current_user.name %>  ] </a>
+            <% else %>
+            <a class="navbar-brand" href="#">Spotify</a>
+            <% end %>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="<%= root_path %>">Home</a></li>
               <% if user_signed_in? %>
-              <li> <a href="<%= destroy_user_session_path %>" data-method='delete'>
-                Logout
-              </a></li>
+              <li> <a href="<%= destroy_user_session_path %>" data-method='delete'>Logout</a></li>
               <% else %>
               <li><a href="<%= new_user_session_path %>"> Login </a></li>
               <li><a href="<%= new_user_registration_path %>"> Register </a></li>
               <% end %>
+            </ul>
+
+
             </div><!--/.nav-collapse -->
           </div><!--/.container-fluid -->
         </nav>
-        
+
         <div class="col-md-12">
           <p class="notice"><%= notice %></p>
           <p class="alert"><%= alert %></p>
