--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -11,19 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :duration %>
-    <%= f.number_field :duration %>
+    <%= f.number_field :duration, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :genre_id %>
-    <%= f.text_field :genre_id %>
+    <%= f.select :genre_id, Genre.all.collect { |g| [ g.name, g.id ] }, {}, { :class => 'form-control' } %>
   </div>
 
   <div class="actions">
