--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="<%= root_path %>">Home</a></li>
               <% if user_signed_in? %>
+              <li> <a href="<%= users_path %>">Listado de Usuarios</a></li>
               <li> <a href="<%= destroy_user_session_path %>" data-method='delete'>Logout</a></li>
               <% else %>
               <li><a href="<%= new_user_session_path %>"> Login </a></li>
